--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -386,6 +386,24 @@ footer {
   height: 50vh;
 }
 
+.scroll-top {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  width: 3.2rem;
+  height: 3.2rem;
+  z-index: 10;
+  background-color: rgba(56, 56, 56, 0.6);
+  border: none;
+  border-radius: 5px;
+  font-size: 1.6rem;
+  color: rgba(248, 248, 248, 0.8);
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .banner {
   background-image: url("./images/background1.jpg");
   background-size: cover;
@@ -415,7 +433,7 @@ footer {
   right: 0;
   bottom: -100px;
   height: 130px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(229, 241, 250, 0.5);
   transform: skewY(4deg);
 }
 .banner .foreground:after {
@@ -425,98 +443,130 @@ footer {
   right: 0;
   bottom: -150px;
   height: 200px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(229, 241, 250, 0.5);
   transform: skewY(-8deg);
 }
 
-.home .content .articles {
+.home .content .hot-post .card:nth-of-type(3), .home .content .latest .card:first-of-type {
+  background-color: transparent;
+  cursor: default;
+}
+.home .content .hot-post .card:nth-of-type(3) h2, .home .content .latest .card:first-of-type h2 {
+  font-size: 2rem;
+  position: absolute;
+  right: 5rem;
+  bottom: 4rem;
+}
+.home .content .hot-post .card:nth-of-type(3) h2:after, .home .content .latest .card:first-of-type h2:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 4.5rem;
+  height: 3rem;
+  bottom: -1.4rem;
+  right: -1.6rem;
+  border: solid #203755;
+  border-width: 0 12px 12px 0;
+}
+
+.home .content .hot-post .card:nth-of-type(4), .home .content .latest .card:last-of-type {
   display: flex;
-  height: 16rem;
-  padding: 0 3rem 0;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
 }
-.home .content .articles .post {
-  flex: 1;
-  min-width: 0;
-  margin-right: 2.4rem;
-  background-color: #fffcf5;
-  background-image: linear-gradient(#fff7e6, #fffcf5 40%);
-  border-radius: 12px;
-  transition: all 0.3s;
+
+.home .content .hot-post .card, .home .content .latest .card {
+  position: relative;
+  background-color: #cee5fa;
+  padding: 1.2rem 1.4rem 2rem;
+  transition: color 0.5s, background-color 0.5s;
+  cursor: pointer;
 }
-.home .content .articles .post:last-of-type {
-  margin-right: 0;
-}
-.home .content .articles .post:hover {
-  transform: translateY(-20px) rotateZ(8deg);
-}
-.home .content .articles .post.dont-rotate:hover {
-  transform: translateY(-20px);
-}
-.home .content .articles .post h3 {
+.home .content .hot-post .card h2, .home .content .latest .card h2,
+.home .content .hot-post .card h3,
+.home .content .latest .card h3 {
   margin: 0;
-  padding: 1rem 0.8rem 1rem 1.2rem;
+}
+.home .content .hot-post .card h3, .home .content .latest .card h3 {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   font-size: 1.6rem;
 }
-.home .content .articles .post .preview {
+.home .content .hot-post .card .preview, .home .content .latest .card .preview {
   position: relative;
   margin: 0;
-  padding: 0 1.3rem 0 1.2rem;
-  height: 10rem;
+  margin-top: 1rem;
+  height: 12.5rem;
   overflow-y: hidden;
   text-overflow: ellipsis;
   font-size: 1.2rem;
-  line-height: 1.2;
+  line-height: 1.3;
 }
-.home .content .articles .post .dots {
-  position: absolute;
-  right: 1.2rem;
-  bottom: 0;
-  width: 8rem;
-  height: 1.2rem;
-  background-image: linear-gradient(to right, rgba(255, 252, 245, 0), #fffcf5 60%);
+
+.home .content .latest .card {
+  color: #203755;
 }
-.home .content .articles:after {
-  content: "";
-  position: absolute;
-  top: 8rem;
-  bottom: -2rem;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  background-image: linear-gradient(rgba(217, 238, 247, 0.3), rgba(217, 238, 247, 0.8));
-  border-radius: 10px;
+.home .content .latest .card:nth-of-type(n + 2):hover {
+  color: #e5f1fa;
+  background-color: #315581;
+}
+.home .content .latest .card:last-of-type:hover {
+  color: #f8f8f8;
+  background-color: rgba(56, 56, 56, 0.6);
+}
+
+.home .content .hot-post .card:nth-of-type(-n + 2), .home .content .hot-post .card:nth-of-type(n + 5) {
+  background-color: #a7331f;
+}
+.home .content .hot-post .card:nth-of-type(-n + 2):hover, .home .content .hot-post .card:nth-of-type(n + 5):hover {
+  color: #a7331f;
+  background-color: #fadad6;
+}
+.home .content .hot-post .card:nth-of-type(3) h2 {
+  left: 5rem;
+}
+.home .content .hot-post .card:nth-of-type(3) h2:after {
+  left: -1.6rem;
+  border-color: #f8f8f8;
+  border-width: 0 0 12px 12px;
+}
+.home .content .hot-post .card:nth-of-type(4):hover {
+  background-color: rgba(56, 56, 56, 0.6);
 }
 
 :root {
   font-family: "Maven Pro", "Noto Sans TC", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .home .content {
   display: flex;
-  justify-content: center;
+  flex-flow: column;
   color: #383838;
 }
-.home .content .content-wrapper {
-  position: relative;
-  flex-basis: 1200px;
-  padding: 0 3rem;
-}
-.home .content .content-wrapper section {
-  margin: 3rem 0 6rem;
+.home .content section {
   position: relative;
   z-index: 2;
+  display: flex;
+  justify-content: center;
 }
-.home .content .content-wrapper h2 {
-  font-size: 1.8rem;
-  font-weight: normal;
-  margin: 0 0 2rem 0;
-  padding-bottom: 0.2rem;
-  border-width: 0 0 1px 0;
-  border-style: solid;
-  border-image: linear-gradient(to right, rgba(56, 56, 56, 0.1), rgba(56, 56, 56, 0.7) 8%, rgba(56, 56, 56, 0) 20%) 1;
+.home .content section:first-of-type {
+  background-color: #e5f1fa;
+}
+.home .content section:nth-of-type(2) {
+  background-color: #ca3d24;
+  color: #f8f8f8;
+}
+.home .content .content-wrapper {
+  padding: 5rem 3rem;
+  flex-basis: 1200px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 0.3rem;
+  column-gap: 0.3rem;
 }
 
 /*# sourceMappingURL=style.css.map */
