[UPDATE] add about section, minor changes

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -7,6 +7,7 @@
 @import "./components/placeholder";
 @import "./components/scroll_top";
 @import "./components/homepage/banner";
+@import "./components/homepage/card_deck";
 @import "./components/homepage/article_grid";
 // @import "./components/homepage/article_deck";
 
