--- a/assets/static/sass/components/homepage/_article_grid.scss
+++ b/assets/static/sass/components/homepage/_article_grid.scss
@@ -1,73 +1,5 @@
-%deck-title-block {
-  background-color: transparent;
-  cursor: default;
-
-  h2 {
-    font-size: 2rem;
-    position: absolute;
-    right: 5rem;
-    bottom: 4rem;
-
-    &:after {
-      content: "";
-      display: inline-block;
-      position: absolute;
-      width: 4.5rem;
-      height: 3rem;
-
-      bottom: -1.4rem;
-      right: -1.6rem;
-
-      border: solid $latest-ui-color;
-      border-width: 0 12px 12px 0;
-    }
-  }
-}
-
-%deck-more-block {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: transparent;
-}
-
-%normal-card-block {
-  position: relative;
-  background-color: $latest-card-color;
-  padding: 1.2rem 1.4rem 2rem;
-
-  transition: color 0.5s, background-color 0.5s;
-  cursor: pointer;
-
-  h2,
-  h3 {
-    margin: 0;
-  }
-
-  h3 {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-
-    font-size: 1.6rem;
-  }
-
-  .preview {
-    position: relative;
-    margin: 0;
-    margin-top: 1rem;
-    height: 12.5rem;
-    overflow-y: hidden;
-    text-overflow: ellipsis;
-
-    font-size: 1.2rem;
-    line-height: 1.3;
-  }
-}
-
 .home .content .latest .card {
   @extend %normal-card-block;
-  color: $latest-ui-color;
 
   &:nth-of-type(n + 2):hover {
     color: $latest-content-color;
@@ -121,6 +53,53 @@
 
     &:hover {
       background-color: rgba($more-card-hover-color, 0.6);
+    }
+  }
+}
+
+.home .content .about .card {
+  @extend %normal-card-block;
+
+  &:first-of-type {
+    @extend %deck-title-block;
+    grid-column: 1 / 3;
+
+    h2 {
+      bottom: 6rem;
+      right: 8rem;
+      font-size: 3.2rem;
+    }
+
+    h2:before {
+      content: "";
+      position: absolute;
+      width: 8rem;
+      height: 5.2rem;
+
+      top: -6rem;
+      left: -12rem;
+
+      border: solid $about-ui-color;
+      border-width: 24px 0 0 26px;
+    }
+
+    h2:after {
+      bottom: -2rem;
+      right: -2.4rem;
+      width: 8rem;
+      height: 3.6rem;
+
+      border-color: $about-ui-color;
+      border-width: 0 18px 16px 0;
+    }
+  }
+
+  &:nth-of-type(n + 2) {
+    background-color: $about-card-color;
+
+    &:hover {
+      color: $about-content-color;
+      background-color: $about-card-hover-color;
     }
   }
 }
