--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -9,6 +9,7 @@ $banner-inner-color: rgba(0, 0, 0, 0.1);
 $content-color: rgb(248, 248, 248);
 $latest-content-color: rgb(229, 241, 250);
 $hotpost-content-color: rgb(202, 61, 36);
+$about-content-color: rgb(210, 243, 232);
 
 $articles-deck-color: rgb(217, 238, 247);
 $post-color: rgb(255, 252, 245);
@@ -19,11 +20,15 @@ $post-color-deep: adjust-color(
 );
 $default-ui-color: rgb(56, 56, 56);
 $latest-ui-color: rgb(32, 55, 85);
+$hotpost-ui-color: $content-color;
+$about-ui-color: rgb(41, 77, 57);
 
 $latest-card-color: rgb(206, 229, 250);
 $latest-card-hover-color: rgb(49, 85, 129);
 $hotpost-card-color: rgb(167, 51, 31);
 $hotpost-card-hover-color: rgb(250, 218, 214);
+$about-card-color: rgb(173, 226, 208);
+$about-card-hover-color: rgb(19, 95, 70);
 $more-card-hover-color: $default-ui-color;
 
 $color1: rgb(255, 219, 219);
