--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -402,6 +402,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: opacity 1s;
+  opacity: 1;
+}
+.scroll-top.hidden {
+  opacity: 0;
 }
 
 .banner {
@@ -447,19 +452,18 @@ footer {
   transform: skewY(-8deg);
 }
 
-.home .content .hot-post .card:nth-of-type(3), .home .content .latest .card:first-of-type {
+.home .content .about .card:first-of-type, .home .content .hot-post .card:nth-of-type(3), .home .content .latest .card:first-of-type {
   background-color: transparent;
   cursor: default;
 }
-.home .content .hot-post .card:nth-of-type(3) h2, .home .content .latest .card:first-of-type h2 {
+.home .content .about .card:first-of-type h2, .home .content .hot-post .card:nth-of-type(3) h2, .home .content .latest .card:first-of-type h2 {
   font-size: 2rem;
   position: absolute;
-  right: 5rem;
   bottom: 4rem;
+  right: 5rem;
 }
-.home .content .hot-post .card:nth-of-type(3) h2:after, .home .content .latest .card:first-of-type h2:after {
+.home .content .about .card:first-of-type h2:after, .home .content .hot-post .card:nth-of-type(3) h2:after, .home .content .latest .card:first-of-type h2:after {
   content: "";
-  display: inline-block;
   position: absolute;
   width: 4.5rem;
   height: 3rem;
@@ -476,25 +480,26 @@ footer {
   background-color: transparent;
 }
 
-.home .content .hot-post .card, .home .content .latest .card {
+.home .content .about .card, .home .content .hot-post .card, .home .content .latest .card {
   position: relative;
   background-color: #cee5fa;
   padding: 1.2rem 1.4rem 2rem;
   transition: color 0.5s, background-color 0.5s;
   cursor: pointer;
 }
-.home .content .hot-post .card h2, .home .content .latest .card h2,
+.home .content .about .card h2, .home .content .hot-post .card h2, .home .content .latest .card h2,
+.home .content .about .card h3,
 .home .content .hot-post .card h3,
 .home .content .latest .card h3 {
   margin: 0;
 }
-.home .content .hot-post .card h3, .home .content .latest .card h3 {
+.home .content .about .card h3, .home .content .hot-post .card h3, .home .content .latest .card h3 {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   font-size: 1.6rem;
 }
-.home .content .hot-post .card .preview, .home .content .latest .card .preview {
+.home .content .about .card .preview, .home .content .hot-post .card .preview, .home .content .latest .card .preview {
   position: relative;
   margin: 0;
   margin-top: 1rem;
@@ -505,9 +510,6 @@ footer {
   line-height: 1.3;
 }
 
-.home .content .latest .card {
-  color: #203755;
-}
 .home .content .latest .card:nth-of-type(n + 2):hover {
   color: #e5f1fa;
   background-color: #315581;
@@ -536,6 +538,40 @@ footer {
   background-color: rgba(56, 56, 56, 0.6);
 }
 
+.home .content .about .card:first-of-type {
+  grid-column: 1/3;
+}
+.home .content .about .card:first-of-type h2 {
+  bottom: 6rem;
+  right: 8rem;
+  font-size: 3.2rem;
+}
+.home .content .about .card:first-of-type h2:before {
+  content: "";
+  position: absolute;
+  width: 8rem;
+  height: 5.2rem;
+  top: -6rem;
+  left: -12rem;
+  border: solid #294d39;
+  border-width: 24px 0 0 26px;
+}
+.home .content .about .card:first-of-type h2:after {
+  bottom: -2rem;
+  right: -2.4rem;
+  width: 8rem;
+  height: 3.6rem;
+  border-color: #294d39;
+  border-width: 0 18px 16px 0;
+}
+.home .content .about .card:nth-of-type(n + 2) {
+  background-color: #ade2d0;
+}
+.home .content .about .card:nth-of-type(n + 2):hover {
+  color: #d2f3e8;
+  background-color: #135f46;
+}
+
 :root {
   font-family: "Maven Pro", "Noto Sans TC", sans-serif;
   scroll-behavior: smooth;
@@ -554,10 +590,15 @@ footer {
 }
 .home .content section:first-of-type {
   background-color: #e5f1fa;
+  color: #203755;
 }
 .home .content section:nth-of-type(2) {
   background-color: #ca3d24;
   color: #f8f8f8;
+}
+.home .content section:nth-of-type(3) {
+  background-color: #d2f3e8;
+  color: #294d39;
 }
 .home .content .content-wrapper {
   padding: 5rem 3rem;
