--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -351,19 +351,26 @@ nav {
 }
 nav ul {
   display: flex;
-  margin: 0 3rem;
+  margin: 0 5rem;
   padding: 0.6rem 0;
   align-items: center;
   font-size: 1.2rem;
 }
 nav ul li {
   display: inline-block;
-  margin: 0.4rem 0.6rem;
+  margin: 0.4rem 0;
+  padding: 0 1rem;
 }
 nav ul li.brand {
-  margin-right: 3rem;
+  margin-right: auto;
   font-family: "Comfortaa", "Maven Pro", sans-serif;
   font-size: 1.4rem;
+}
+nav ul li.brand .fas {
+  margin-right: 0.4rem;
+}
+nav ul li:nth-of-type(n + 3) {
+  border-left: 1px solid rgba(18, 58, 110, 0.4);
 }
 nav ul li.active {
   font-weight: bold;
