--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -4,12 +4,19 @@
 
 @import "./components/navbar";
 @import "./components/footer";
+@import "./components/sidebar";
+@import "./components/sidebar_content";
+@import "./components/sidebar_nav";
+@import "./components/overlay";
 @import "./components/placeholder";
 @import "./components/scroll_top";
+
 @import "./components/homepage/banner";
 @import "./components/homepage/card_deck";
 @import "./components/homepage/article_grid";
-// @import "./components/homepage/article_deck";
+
+@import "./components/articles/post";
 
 @import "./layout/root";
 @import "./layout/homepage";
+@import "./layout/articles";
