--- a/assets/static/sass/components/homepage/_article_grid.scss
+++ b/assets/static/sass/components/homepage/_article_grid.scss
@@ -23,8 +23,7 @@
 .home .content .hot-post .card {
   @extend %normal-card-block;
 
-  &:nth-of-type(-n + 2),
-  &:nth-of-type(n + 5) {
+  &:nth-of-type(n + 2) {
     background-color: $hotpost-card-color;
 
     &:hover {
@@ -33,8 +32,9 @@
     }
   }
 
-  &:nth-of-type(3) {
+  &:first-of-type {
     @extend %deck-title-block;
+    grid-column: 3 / 3;
 
     h2 {
       left: 5rem;
@@ -48,10 +48,13 @@
     }
   }
 
-  &:nth-of-type(4) {
+  &:last-of-type {
     @extend %deck-more-block;
+    grid-row: 2 / 2;
+    grid-column: 1 / 1;
 
     &:hover {
+      color: $hotpost-ui-color;
       background-color: rgba($more-card-hover-color, 0.6);
     }
   }
