--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -7,6 +7,7 @@
 @import "./components/sidebar";
 @import "./components/sidebar_content";
 @import "./components/sidebar_nav";
+@import "./components/category";
 @import "./components/overlay";
 @import "./components/placeholder";
 @import "./components/scroll_top";
