--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -461,44 +461,67 @@ aside .content .name {
 aside nav {
   width: 100%;
 }
-aside nav ul {
-  margin: 4rem 0 0 0;
+aside nav > ul {
+  margin: 4rem 0 2rem 0;
   padding: 0;
   display: flex;
   flex-flow: column;
   align-items: stretch;
 }
-aside nav ul li {
+aside nav > ul > li:nth-of-type(n + 2) {
+  border-top: 1px solid rgba(0, 63, 37, 0.4);
+}
+aside nav > ul li {
   display: inline-block;
   font-size: 1.4rem;
 }
-aside nav ul li:first-of-type a {
+aside nav > ul i.fa-github {
+  margin-right: 0.6rem;
+}
+aside nav > ul a {
+  width: 100%;
+  display: inline-block;
+  padding: 1rem;
+  text-decoration: none;
+  color: #003f25;
+  transition: background-color 0.3s, color 0.3s;
+}
+aside nav > ul a:hover {
+  color: white;
+  background-color: rgba(0, 63, 37, 0.2);
+}
+
+aside nav > ul > li:first-of-type.expanded {
+  margin-bottom: 0.6rem;
+}
+aside nav > ul > li:first-of-type a {
+  cursor: pointer;
   display: flex;
 }
-aside nav ul li:first-of-type a i {
+aside nav > ul > li:first-of-type a i {
   position: relative;
   top: 1px;
   font-size: 1.6rem;
   margin-left: auto;
   transition: transform 0.2s;
 }
-aside nav ul li:first-of-type a i.opened {
+aside nav > ul > li:first-of-type a i.opened {
   transform: scaleY(-1);
 }
-aside nav ul li:nth-of-type(n + 2) i {
-  margin-right: 0.6rem;
+aside nav > ul .collapsible-category ul {
+  margin: 0 0 0 1rem;
+  padding: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s;
+  display: flex;
+  flex-flow: column;
 }
-aside nav ul a {
-  width: 100%;
-  display: inline-block;
-  padding: 1rem 1rem;
-  text-decoration: none;
-  color: #003f25;
-  transition: background-color 0.3s, color 0.3s;
+aside nav > ul .collapsible-category ul li {
+  font-size: max(0.9em, 1.2rem);
 }
-aside nav ul a:hover {
-  color: white;
-  background-color: rgba(0, 63, 37, 0.2);
+aside nav > ul .collapsible-category ul a {
+  padding: 0.6rem 1rem 0.6rem 0.8rem;
 }
 
 .overlay {
@@ -740,7 +763,8 @@ aside nav ul a:hover {
   margin: 0;
   height: 18rem;
   overflow-y: hidden;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+  line-height: 1.5;
 }
 
 :root {
@@ -791,7 +815,8 @@ aside nav ul a:hover {
   padding: 5rem 3rem;
   flex-basis: 1200px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.6fr;
   grid-auto-rows: 1fr;
   gap: 0.5rem;
 }
