[UPDATE] complete articles page's layout and style

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -17,6 +17,7 @@
 @import "./components/homepage/article_grid";
 
 @import "./components/articles/post";
+@import "./components/articles/banner";
 
 @import "./layout/root";
 @import "./layout/homepage";
