--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -25,10 +25,19 @@ $about-card-color: rgb(173, 226, 208);
 $about-card-hover-color: rgb(19, 95, 70);
 $more-card-hover-color: $default-ui-color;
 
-$articles-page-color: rgb(241, 248, 255);
+$articles-page-color: rgb(244, 249, 255);
+$articles-ui-color: rgb(9, 36, 61);
+$articles-title-color: rgb(3, 48, 26);
+$articles-banner-color1: rgb(140, 251, 255);
+$articles-banner-color2: rgb(255, 220, 196);
+$articles-banner-color3: rgb(134, 217, 255);
+
 $post-color0: rgb(220, 236, 255);
 $post-color1: rgb(204, 228, 255);
 $post-color2: rgb(195, 222, 255);
+$post-hover-color0: rgb(46, 81, 128);
+$post-hover-color1: rgb(29, 66, 112);
+$post-hover-color2: rgb(55, 105, 158);
 
 $sidebar-color1: rgb(209, 234, 255);
 $sidebar-color-mid: rgb(165, 209, 230);
