--- a/assets/static/sass/components/articles/_post.scss
+++ b/assets/static/sass/components/articles/_post.scss
@@ -1,37 +1,72 @@
 .articles main .main-wrapper {
-  .post {
+  article {
     padding: 0.8rem 1.2rem;
-    // background-color: $post-color;
+    overflow-y: hidden;
 
-    h2 {
-      margin: 0;
-      margin-bottom: 0.5rem;
-      font-size: 2rem;
+    cursor: pointer;
+    transition: color 0.5s, background-color 0.5s;
+
+    &:nth-of-type(4n + 1) {
+      grid-column: 1 / 3;
     }
 
-    &:first-of-type {
-      grid-column: 1 / 3;
+    &:nth-of-type(4n) {
+      grid-column: 2 / 4;
+    }
 
-      .preview {
-        height: 12rem;
+    &:hover {
+      color: $articles-page-color;
+      time {
+        color: $articles-page-color;
       }
     }
 
     &:nth-of-type(3n) {
       background-color: $post-color0;
+      &:hover {
+        background-color: $post-hover-color0;
+      }
     }
+
     &:nth-of-type(3n + 1) {
       background-color: $post-color1;
+      &:hover {
+        background-color: $post-hover-color1;
+      }
     }
+
     &:nth-of-type(3n + 2) {
       background-color: $post-color2;
+      &:hover {
+        background-color: $post-hover-color2;
+      }
+    }
+
+    .info {
+      display: flex;
+      flex-flow: wrap;
+      margin-bottom: 0.8rem;
+      align-items: center;
+    }
+
+    h2 {
+      margin: 0 auto 0 0;
+      font-size: 1.8rem;
+    }
+
+    time {
+      font-size: 1.1rem;
+      margin-top: 0.2rem;
+      color: rgba($articles-ui-color, 0.7);
+      transition: color 0.5s;
     }
   }
 
   .preview {
     margin: 0;
-    height: 18rem;
-    overflow-y: hidden;
+    max-height: 12rem;
+    overflow: hidden;
+    // height: 14rem;
 
     font-size: 1.3rem;
     line-height: 1.5;
