--- a/assets/static/sass/components/homepage/_article_grid.scss
+++ b/assets/static/sass/components/homepage/_article_grid.scss
@@ -50,6 +50,7 @@
 
   &:last-of-type {
     @extend %deck-more-block;
+    background-color: transparent;
     grid-row: 2 / 2;
     grid-column: 1 / 1;
 
