--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -453,7 +453,7 @@ aside .content .profile-image:after {
   padding-bottom: 100%;
 }
 aside .content .name {
-  margin-top: 1.2rem;
+  margin-top: 1.5rem;
   font-size: 1.8rem;
   font-weight: bold;
 }
@@ -565,11 +565,11 @@ aside nav > ul .collapsible-category ul a {
   opacity: 0;
 }
 
-.banner {
+.home .banner {
   background-image: url("./images/background1.jpg");
   background-size: cover;
 }
-.banner .foreground {
+.home .banner .foreground {
   background-image: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 79, 168, 0.3));
   height: 90vh;
   position: relative;
@@ -578,7 +578,7 @@ aside nav > ul .collapsible-category ul a {
   align-items: center;
   overflow: hidden;
 }
-.banner .foreground h1 {
+.home .banner .foreground h1 {
   margin: 0;
   font-size: 4.5rem;
   font-family: "Exo 2", "Maven Pro", sans-serif;
@@ -587,7 +587,7 @@ aside nav > ul .collapsible-category ul a {
   background-clip: text;
   color: transparent;
 }
-.banner .foreground:before {
+.home .banner .foreground:before {
   content: "";
   position: absolute;
   left: 0;
@@ -597,7 +597,7 @@ aside nav > ul .collapsible-category ul a {
   background-color: rgba(229, 241, 250, 0.5);
   transform: skewY(4deg);
 }
-.banner .foreground:after {
+.home .banner .foreground:after {
   content: "";
   position: absolute;
   left: 0;
@@ -694,6 +694,7 @@ aside nav > ul .collapsible-category ul a {
   border-width: 0 0 12px 12px;
 }
 .home .content .hot-post .card:last-of-type {
+  background-color: transparent;
   grid-row: 2/2;
   grid-column: 1/1;
 }
@@ -736,35 +737,95 @@ aside nav > ul .collapsible-category ul a {
   background-color: #135f46;
 }
 
-.articles main .main-wrapper .post {
+.articles main .main-wrapper article {
   padding: 0.8rem 1.2rem;
+  overflow-y: hidden;
+  cursor: pointer;
+  transition: color 0.5s, background-color 0.5s;
 }
-.articles main .main-wrapper .post h2 {
-  margin: 0;
-  margin-bottom: 0.5rem;
-  font-size: 2rem;
-}
-.articles main .main-wrapper .post:first-of-type {
+.articles main .main-wrapper article:nth-of-type(4n + 1) {
   grid-column: 1/3;
 }
-.articles main .main-wrapper .post:first-of-type .preview {
-  height: 12rem;
+.articles main .main-wrapper article:nth-of-type(4n) {
+  grid-column: 2/4;
 }
-.articles main .main-wrapper .post:nth-of-type(3n) {
+.articles main .main-wrapper article:hover {
+  color: #f4f9ff;
+}
+.articles main .main-wrapper article:hover time {
+  color: #f4f9ff;
+}
+.articles main .main-wrapper article:nth-of-type(3n) {
   background-color: #dcecff;
 }
-.articles main .main-wrapper .post:nth-of-type(3n + 1) {
+.articles main .main-wrapper article:nth-of-type(3n):hover {
+  background-color: #2e5180;
+}
+.articles main .main-wrapper article:nth-of-type(3n + 1) {
   background-color: #cce4ff;
 }
-.articles main .main-wrapper .post:nth-of-type(3n + 2) {
+.articles main .main-wrapper article:nth-of-type(3n + 1):hover {
+  background-color: #1d4270;
+}
+.articles main .main-wrapper article:nth-of-type(3n + 2) {
   background-color: #c3deff;
+}
+.articles main .main-wrapper article:nth-of-type(3n + 2):hover {
+  background-color: #37699e;
+}
+.articles main .main-wrapper article .info {
+  display: flex;
+  flex-flow: wrap;
+  margin-bottom: 0.8rem;
+  align-items: center;
+}
+.articles main .main-wrapper article h2 {
+  margin: 0 auto 0 0;
+  font-size: 1.8rem;
+}
+.articles main .main-wrapper article time {
+  font-size: 1.1rem;
+  margin-top: 0.2rem;
+  color: rgba(9, 36, 61, 0.7);
+  transition: color 0.5s;
 }
 .articles main .main-wrapper .preview {
   margin: 0;
-  height: 18rem;
-  overflow-y: hidden;
+  max-height: 12rem;
+  overflow: hidden;
   font-size: 1.3rem;
   line-height: 1.5;
+}
+
+.articles .banner {
+  height: 40vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  overflow: hidden;
+  background-image: radial-gradient(circle at top left, rgba(134, 217, 255, 0.9) -15%, rgba(255, 220, 196, 0.4) 60%), radial-gradient(circle at bottom right, rgba(140, 251, 255, 0.9) -10%, rgba(255, 220, 196, 0.4) 80%);
+}
+.articles .banner h1 {
+  margin: 0 auto;
+  position: relative;
+  font-size: 3rem;
+  font-family: "Exo 2", "Maven Pro", sans-serif;
+  color: rgba(3, 48, 26, 0.75);
+  z-index: 3;
+}
+.articles .banner h1:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -14rem;
+  height: 20rem;
+  width: 20rem;
+  border: solid rgba(255, 255, 255, 0.4);
+  border-width: 0 0 8rem 8rem;
+  transform: rotateZ(-45deg);
+  z-index: 2;
 }
 
 :root {
@@ -808,17 +869,21 @@ aside nav > ul .collapsible-category ul a {
 
 .articles main {
   display: flex;
-  justify-content: center;
-  background-color: #f1f8ff;
+  flex-flow: column;
+  align-items: center;
+  background-color: #f4f9ff;
+  color: #09243d;
+}
+.articles main header {
+  height: 30vh;
 }
 .articles .main-wrapper {
   padding: 5rem 3rem;
-  flex-basis: 1200px;
+  max-width: 1200px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.6fr;
-  grid-auto-rows: 1fr;
-  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 18rem;
+  gap: 0.2rem 0.2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
