--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -1,4 +1,5 @@
 @import "./normalize";
+@import "./helper/font";
 @import "./helper/variables";
 @import "./helper/mixins";
 
@@ -19,6 +20,10 @@
 @import "./components/articles/post";
 @import "./components/articles/banner";
 
+@import "./components/post/post_content";
+@import "./components/post/banner";
+
 @import "./layout/root";
 @import "./layout/homepage";
 @import "./layout/articles";
+@import "./layout/post";
