--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -39,20 +39,31 @@ $post-hover-color0: rgb(46, 81, 128);
 $post-hover-color1: rgb(29, 66, 112);
 $post-hover-color2: rgb(55, 105, 158);
 
+$postpage-banner-color1: rgb(238, 219, 194);
+$postpage-banner-color2: rgb(248, 248, 197);
+$postpage-banner-color3: rgb(216, 236, 201);
+$postpage-color: rgb(252, 249, 243);
+// $postpage-title-color: rgb(87, 57, 45);
+$postpage-ui-color: rgb(92, 68, 58);
+$postpage-link-color: rgb(27, 177, 89);
+$postpage-quote-color: rgb(66, 177, 112);
+$postpage-quote-header-color: rgb(66, 177, 158);
+$postpage-quote-marker-color: rgb(59, 128, 43);
+
 $sidebar-color1: rgb(209, 234, 255);
 $sidebar-color-mid: rgb(165, 209, 230);
 $sidebar-color2: rgb(136, 207, 166);
-$sidebar-handle-color: rgb(172, 215, 228);
+$sidebar-handle-color: rgb(203, 234, 240);
 $sidebar-ui-color: rgb(0, 63, 37);
 
 $color1: rgb(255, 219, 219);
 $color2: rgb(227, 234, 255);
 $color3: rgb(238, 255, 206);
 
-// $footer-color: rgb(56, 53, 51);
 $footer-color: rgb(92, 87, 83);
 $footer-text-color: rgb(255, 249, 240);
 
-$default-font: "Maven Pro", "Noto Sans TC", sans-serif;
+$default-font: "Maven Pro", "FakePearl-Light", "Noto Sans TC", sans-serif;
 $brand-font: "Comfortaa", "Maven Pro", sans-serif;
+$mono-font: "Ubuntu Mono", monospace;
 $title-font: "Exo 2", "Maven Pro", sans-serif;
