--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -346,6 +347,10 @@ template {
   display: none;
 }
 
+@font-face {
+  font-family: FakePearl-Light;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff2) format("woff2"), url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff) format("woff");
+}
 header nav {
   background-color: #cbe5ff;
 }
@@ -419,7 +424,8 @@ aside .handle {
   -webkit-backdrop-filter: blur(3px);
   backdrop-filter: blur(3px);
   font-size: 1.2rem;
-  background-color: rgba(172, 215, 228, 0.95);
+  color: #cbeaf0;
+  background-color: rgba(0, 63, 37, 0.8);
   border: none;
   border-radius: 0 5px 5px 0;
   outline: none;
@@ -737,41 +743,47 @@ aside nav > ul .collapsible-category ul a {
   background-color: #135f46;
 }
 
-.articles main .main-wrapper article {
-  padding: 0.8rem 1.2rem;
-  overflow-y: hidden;
+.articles main .main-wrapper a.post-link {
+  display: flex;
+  align-items: stretch;
+  text-decoration: none;
+  color: #09243d;
   cursor: pointer;
   transition: color 0.5s, background-color 0.5s;
 }
-.articles main .main-wrapper article:nth-of-type(4n + 1) {
+.articles main .main-wrapper a.post-link:nth-of-type(4n + 1) {
   grid-column: 1/3;
 }
-.articles main .main-wrapper article:nth-of-type(4n) {
+.articles main .main-wrapper a.post-link:nth-of-type(4n) {
   grid-column: 2/4;
 }
-.articles main .main-wrapper article:hover {
+.articles main .main-wrapper a.post-link:hover {
   color: #f4f9ff;
 }
-.articles main .main-wrapper article:hover time {
+.articles main .main-wrapper a.post-link:hover time {
   color: #f4f9ff;
 }
-.articles main .main-wrapper article:nth-of-type(3n) {
+.articles main .main-wrapper a.post-link:nth-of-type(3n) {
   background-color: #dcecff;
 }
-.articles main .main-wrapper article:nth-of-type(3n):hover {
+.articles main .main-wrapper a.post-link:nth-of-type(3n):hover {
   background-color: #2e5180;
 }
-.articles main .main-wrapper article:nth-of-type(3n + 1) {
+.articles main .main-wrapper a.post-link:nth-of-type(3n + 1) {
   background-color: #cce4ff;
 }
-.articles main .main-wrapper article:nth-of-type(3n + 1):hover {
+.articles main .main-wrapper a.post-link:nth-of-type(3n + 1):hover {
   background-color: #1d4270;
 }
-.articles main .main-wrapper article:nth-of-type(3n + 2) {
+.articles main .main-wrapper a.post-link:nth-of-type(3n + 2) {
   background-color: #c3deff;
 }
-.articles main .main-wrapper article:nth-of-type(3n + 2):hover {
+.articles main .main-wrapper a.post-link:nth-of-type(3n + 2):hover {
   background-color: #37699e;
+}
+.articles main .main-wrapper article {
+  padding: 0.8rem 1.2rem;
+  overflow-y: hidden;
 }
 .articles main .main-wrapper article .info {
   display: flex;
@@ -828,8 +840,192 @@ aside nav > ul .collapsible-category ul a {
   z-index: 2;
 }
 
+.postpage article .post-content {
+  font-size: 1.3rem;
+  line-height: 1.5;
+  padding: 0 4rem;
+}
+.postpage article .post-content h1,
+.postpage article .post-content h2,
+.postpage article .post-content h3,
+.postpage article .post-content h4,
+.postpage article .post-content h5,
+.postpage article .post-content h6 {
+  margin: 0 0 1.2rem 0;
+}
+.postpage article .post-content p,
+.postpage article .post-content pre {
+  margin: 0 0 1rem 0;
+}
+.postpage article .post-content ol,
+.postpage article .post-content ul,
+.postpage article .post-content dl {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+.postpage article .post-content h1 {
+  margin-top: 1.2rem;
+  position: relative;
+  font-size: 2.5rem;
+}
+.postpage article .post-content > h1:before {
+  content: "";
+  position: absolute;
+  left: -3.2rem;
+  bottom: 0.3rem;
+  font-family: "Font Awesome 5 Free";
+  font-size: 2rem;
+  color: rgba(27, 177, 89, 0.7);
+}
+.postpage article .post-content h2 {
+  margin-top: 1.2rem;
+  font-size: 2.2rem;
+}
+.postpage article .post-content h3 {
+  font-size: 2rem;
+}
+.postpage article .post-content h4 {
+  font-size: 1.8rem;
+}
+.postpage article .post-content h5 {
+  font-size: 1.6rem;
+}
+.postpage article .post-content h6 {
+  font-size: 1.4rem;
+}
+.postpage article .post-content a {
+  text-decoration: none;
+  color: #1bb159;
+}
+.postpage article .post-content a:visited {
+  color: #1c7d44;
+}
+.postpage article .post-content a:hover {
+  color: #2fd171;
+}
+.postpage article .post-content ul li {
+  list-style-type: none;
+  position: relative;
+}
+.postpage article .post-content ul li:before {
+  content: "";
+  position: absolute;
+  left: -1.8rem;
+  top: 1px;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: rgba(92, 68, 58, 0.8);
+  transform: scaleX(0.75);
+}
+.postpage article .post-content ol li::marker {
+  font-weight: bold;
+  color: rgba(92, 68, 58, 0.8);
+}
+.postpage article .post-content blockquote {
+  margin: 2.2rem 0 0 1.8rem;
+  padding: 0.2rem 0 0.2rem 0.8rem;
+  position: relative;
+  font-style: italic;
+  font-weight: bold;
+  color: #42b170;
+}
+.postpage article .post-content blockquote blockquote {
+  margin-top: 2rem;
+}
+.postpage article .post-content blockquote:before {
+  content: "";
+  position: absolute;
+  top: -1.6rem;
+  left: 0;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: rgba(27, 177, 89, 0.7);
+}
+.postpage article .post-content blockquote ul li:before {
+  color: rgba(59, 128, 43, 0.7);
+}
+.postpage article .post-content blockquote ol li::marker {
+  color: rgba(59, 128, 43, 0.7);
+}
+.postpage article .post-content blockquote h1,
+.postpage article .post-content blockquote h2,
+.postpage article .post-content blockquote h3,
+.postpage article .post-content blockquote h4,
+.postpage article .post-content blockquote h5,
+.postpage article .post-content blockquote h6 {
+  margin: 0 0 0.8rem 0;
+}
+.postpage article .post-content blockquote p,
+.postpage article .post-content blockquote pre {
+  margin: 0 0 0.6rem 0;
+}
+.postpage article .post-content blockquote h1,
+.postpage article .post-content blockquote h2,
+.postpage article .post-content blockquote h3,
+.postpage article .post-content blockquote h4,
+.postpage article .post-content blockquote h5,
+.postpage article .post-content blockquote h6 {
+  color: #42b19e;
+}
+.postpage article .post-content pre {
+  padding: 0.4rem 0.5rem 0.4rem 0.8rem;
+  border-radius: 5px;
+  background-color: rgba(92, 68, 58, 0.1);
+}
+.postpage article .post-content code {
+  font-family: "Ubuntu Mono", monospace;
+}
+.postpage article .post-content :not(pre) > code {
+  border-radius: 3px;
+  padding: 0 0.4rem 0.1rem;
+  background-color: rgba(92, 68, 58, 0.1);
+}
+.postpage article .post-content hr {
+  margin: 1.4rem 0;
+  border: none;
+  border-bottom: 1px solid rgba(92, 68, 58, 0.3);
+}
+
+.postpage .banner {
+  height: 40vh;
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  overflow: hidden;
+  background-image: radial-gradient(circle at top left, rgba(238, 219, 194, 0.9) -15%, rgba(248, 248, 197, 0.4) 70%), radial-gradient(circle at bottom right, rgba(216, 236, 201, 0.9) -20%, rgba(248, 248, 197, 0.4) 60%);
+}
+.postpage .banner:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  margin: -11.5rem;
+  height: 16rem;
+  width: 16rem;
+  border: solid rgba(255, 255, 255, 0.4);
+  border-width: 0 0 7rem 7rem;
+  transform: rotateZ(-45deg);
+  z-index: 2;
+}
+.postpage .banner:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  margin: -5.5rem;
+  height: 6rem;
+  width: 6rem;
+  border: solid rgba(255, 255, 255, 0.4);
+  border-width: 0 0 5rem 5rem;
+  transform: rotateZ(-45deg);
+  z-index: 2;
+}
+
 :root {
-  font-family: "Maven Pro", "Noto Sans TC", sans-serif;
+  font-family: "Maven Pro", "FakePearl-Light", "Noto Sans TC", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -884,6 +1080,53 @@ aside nav > ul .collapsible-category ul a {
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 18rem;
   gap: 0.2rem 0.2rem;
+}
+
+.postpage main {
+  display: flex;
+  justify-content: center;
+  background-color: #fcf9f3;
+}
+.postpage main article {
+  margin: 3rem 0;
+  padding: 2rem;
+  flex-basis: 1080px;
+  color: #5c443a;
+}
+.postpage main article .info {
+  display: flex;
+  align-items: baseline;
+  padding-bottom: 0.2rem;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid rgba(92, 68, 58, 0.2);
+  position: relative;
+}
+.postpage main article .info > i {
+  font-size: 2rem;
+  margin-right: 1rem;
+  color: rgba(92, 68, 58, 0.6);
+}
+.postpage main article .title {
+  margin: 0;
+  margin-right: auto;
+  font-size: 3rem;
+}
+.postpage main article .meta-data {
+  margin-left: 1rem;
+  font-size: 1.2rem;
+  color: rgba(92, 68, 58, 0.6);
+}
+.postpage main article .meta-data i {
+  position: relative;
+  top: 1px;
+  margin-right: 0.3rem;
+}
+.postpage main article .author {
+  margin-top: auto;
+  padding: 0 0.8rem 0.3rem 0;
+}
+.postpage main article .publish-date {
+  padding-top: 0.3rem;
 }
 
 /*# sourceMappingURL=style.css.map */
