[UPDATE] homepage's card; chinese font

--- a/assets/static/sass/components/articles/_post.scss
+++ b/assets/static/sass/components/articles/_post.scss
@@ -74,7 +74,7 @@
     margin: 0;
     max-height: 12rem;
     overflow: hidden;
-    // height: 14rem;
+    font-family: $post-font;
 
     font-size: 1.3rem;
     line-height: 1.5;
