--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -63,7 +63,8 @@ $color3: rgb(238, 255, 206);
 $footer-color: rgb(92, 87, 83);
 $footer-text-color: rgb(255, 249, 240);
 
-$default-font: "Maven Pro", "FakePearl-Light", "Noto Sans TC", sans-serif;
+$default-font: "Maven Pro", "Noto Sans TC", sans-serif;
+$post-font: "Maven Pro", "FakePearl", sans-serif;
 $brand-font: "Comfortaa", "Maven Pro", sans-serif;
 $mono-font: "Ubuntu Mono", monospace;
 $title-font: "Exo 2", "Maven Pro", sans-serif;
