--- a/assets/static/sass/layout/_post.scss
+++ b/assets/static/sass/layout/_post.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     background-color: $postpage-color;
+    font-family: $post-font;
 
     article {
       margin: 3rem 0;
