--- a/assets/static/sass/components/homepage/_card_deck.scss
+++ b/assets/static/sass/components/homepage/_card_deck.scss
@@ -1,6 +1,5 @@
 %deck-title-block {
   background-color: transparent;
-  cursor: default;
 
   h2 {
     font-size: 2rem;
@@ -34,9 +33,9 @@
   position: relative;
   background-color: $latest-card-color;
   padding: 1.2rem 1.4rem 2rem;
+  text-decoration: none;
 
   transition: color 0.5s, background-color 0.5s;
-  cursor: pointer;
 
   h2,
   h3 {
@@ -61,5 +60,6 @@
 
     font-size: 1.2rem;
     line-height: 1.3;
+    font-family: $post-font;
   }
 }
