--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -348,8 +348,14 @@ template {
 }
 
 @font-face {
-  font-family: FakePearl-Light;
+  font-family: FakePearl;
   src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff2) format("woff2"), url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff) format("woff");
+  font-weight: normal;
+}
+@font-face {
+  font-family: FakePearl;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Medium.woff2) format("woff2"), url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Medium.woff) format("woff");
+  font-weight: bold;
 }
 pre code.hljs {
   padding: 0;
@@ -620,17 +626,16 @@ aside nav > ul .collapsible-category ul a {
   transform: skewY(-8deg);
 }
 
-.home .content .about .card:first-of-type, .home .content .hot-post .card:first-of-type, .home .content .latest .card:first-of-type {
+.home .content .about .card:first-child, .home .content .hot-post .card:first-child, .home .content .latest .card:first-child {
   background-color: transparent;
-  cursor: default;
 }
-.home .content .about .card:first-of-type h2, .home .content .hot-post .card:first-of-type h2, .home .content .latest .card:first-of-type h2 {
+.home .content .about .card:first-child h2, .home .content .hot-post .card:first-child h2, .home .content .latest .card:first-child h2 {
   font-size: 2rem;
   position: absolute;
   bottom: 4rem;
   right: 5rem;
 }
-.home .content .about .card:first-of-type h2:after, .home .content .hot-post .card:first-of-type h2:after, .home .content .latest .card:first-of-type h2:after {
+.home .content .about .card:first-child h2:after, .home .content .hot-post .card:first-child h2:after, .home .content .latest .card:first-child h2:after {
   content: "";
   position: absolute;
   width: 4.5rem;
@@ -641,7 +646,7 @@ aside nav > ul .collapsible-category ul a {
   border-width: 0 12px 12px 0;
 }
 
-.home .content .hot-post .card:last-of-type, .home .content .latest .card:last-of-type {
+.home .content .hot-post .card:last-child, .home .content .latest .card:last-child {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -652,8 +657,8 @@ aside nav > ul .collapsible-category ul a {
   position: relative;
   background-color: #cee5fa;
   padding: 1.2rem 1.4rem 2rem;
+  text-decoration: none;
   transition: color 0.5s, background-color 0.5s;
-  cursor: pointer;
 }
 .home .content .about .card h2, .home .content .hot-post .card h2, .home .content .latest .card h2,
 .home .content .about .card h3,
@@ -676,54 +681,55 @@ aside nav > ul .collapsible-category ul a {
   text-overflow: ellipsis;
   font-size: 1.2rem;
   line-height: 1.3;
+  font-family: "Maven Pro", "FakePearl", sans-serif;
 }
 
-.home .content .latest .card:nth-of-type(n + 2):hover {
+.home .content .latest .card:nth-child(n+2):hover {
   color: #e5f1fa;
   background-color: #315581;
 }
-.home .content .latest .card:last-of-type:hover {
+.home .content .latest .card:last-child:hover {
   color: #f8f8f8;
   background-color: rgba(56, 56, 56, 0.6);
 }
 
-.home .content .hot-post .card:nth-of-type(n + 2) {
+.home .content .hot-post .card:nth-child(n+2) {
   background-color: #a7331f;
 }
-.home .content .hot-post .card:nth-of-type(n + 2):hover {
+.home .content .hot-post .card:nth-child(n+2):hover {
   color: #a7331f;
   background-color: #fadad6;
 }
-.home .content .hot-post .card:first-of-type {
+.home .content .hot-post .card:first-child {
   grid-column: 3/3;
 }
-.home .content .hot-post .card:first-of-type h2 {
+.home .content .hot-post .card:first-child h2 {
   left: 5rem;
 }
-.home .content .hot-post .card:first-of-type h2:after {
+.home .content .hot-post .card:first-child h2:after {
   left: -1.6rem;
   border-color: #f8f8f8;
   border-width: 0 0 12px 12px;
 }
-.home .content .hot-post .card:last-of-type {
+.home .content .hot-post .card:last-child {
   background-color: transparent;
   grid-row: 2/2;
   grid-column: 1/1;
 }
-.home .content .hot-post .card:last-of-type:hover {
+.home .content .hot-post .card:last-child:hover {
   color: #f8f8f8;
   background-color: rgba(56, 56, 56, 0.6);
 }
 
-.home .content .about .card:first-of-type {
+.home .content .about .card:first-child {
   grid-column: 1/3;
 }
-.home .content .about .card:first-of-type h2 {
+.home .content .about .card:first-child h2 {
   bottom: 6rem;
   right: 8rem;
   font-size: 3.2rem;
 }
-.home .content .about .card:first-of-type h2:before {
+.home .content .about .card:first-child h2:before {
   content: "";
   position: absolute;
   width: 8rem;
@@ -733,7 +739,7 @@ aside nav > ul .collapsible-category ul a {
   border: solid #294d39;
   border-width: 24px 0 0 26px;
 }
-.home .content .about .card:first-of-type h2:after {
+.home .content .about .card:first-child h2:after {
   bottom: -2rem;
   right: -2.4rem;
   width: 8rem;
@@ -741,10 +747,10 @@ aside nav > ul .collapsible-category ul a {
   border-color: #294d39;
   border-width: 0 18px 16px 0;
 }
-.home .content .about .card:nth-of-type(n + 2) {
+.home .content .about .card:nth-child(n+2) {
   background-color: #ade2d0;
 }
-.home .content .about .card:nth-of-type(n + 2):hover {
+.home .content .about .card:nth-child(n+2):hover {
   color: #d2f3e8;
   background-color: #135f46;
 }
@@ -811,6 +817,7 @@ aside nav > ul .collapsible-category ul a {
   margin: 0;
   max-height: 12rem;
   overflow: hidden;
+  font-family: "Maven Pro", "FakePearl", sans-serif;
   font-size: 1.3rem;
   line-height: 1.5;
 }
@@ -1055,7 +1062,7 @@ aside nav > ul .collapsible-category ul a {
 }
 
 :root {
-  font-family: "Maven Pro", "FakePearl-Light", "Noto Sans TC", sans-serif;
+  font-family: "Maven Pro", "Noto Sans TC", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -1072,14 +1079,20 @@ aside nav > ul .collapsible-category ul a {
 }
 .home .content section:first-of-type {
   background-color: #e5f1fa;
+}
+.home .content section:first-of-type .card {
   color: #203755;
 }
 .home .content section:nth-of-type(2) {
   background-color: #ca3d24;
+}
+.home .content section:nth-of-type(2) .card {
   color: #f8f8f8;
 }
 .home .content section:nth-of-type(3) {
   background-color: #d2f3e8;
+}
+.home .content section:nth-of-type(3) .card {
   color: #294d39;
 }
 .home .content .content-wrapper {
@@ -1116,6 +1129,7 @@ aside nav > ul .collapsible-category ul a {
   display: flex;
   justify-content: center;
   background-color: #fcf9f3;
+  font-family: "Maven Pro", "FakePearl", sans-serif;
 }
 .postpage main article {
   margin: 3rem 0;
