[UPDATE] portfolio page's banner

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -25,7 +25,10 @@
 @import "./components/post/banner";
 @import "./components/post/line_numbers";
 
+@import "./components/portfolio/banner";
+
 @import "./layout/root";
 @import "./layout/homepage";
 @import "./layout/articles";
 @import "./layout/post";
+@import "./layout/portfolio";
