--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -40,15 +40,20 @@ $post-hover-color1: rgb(29, 66, 112);
 $post-hover-color2: rgb(55, 105, 158);
 
 $postpage-banner-color1: rgb(238, 219, 194);
-$postpage-banner-color2: rgb(248, 248, 197);
-$postpage-banner-color3: rgb(216, 236, 201);
+$postpage-banner-color2: rgb(248, 248, 187);
+$postpage-banner-color3: rgb(217, 245, 199);
 $postpage-color: rgb(252, 249, 243);
-// $postpage-title-color: rgb(87, 57, 45);
 $postpage-ui-color: rgb(92, 68, 58);
 $postpage-link-color: rgb(27, 177, 89);
 $postpage-quote-color: rgb(66, 177, 112);
 $postpage-quote-header-color: rgb(66, 177, 158);
 $postpage-quote-marker-color: rgb(59, 128, 43);
+
+$portfolio-banner-color1: rgb(255, 151, 103);
+$portfolio-banner-color2: rgb(255, 253, 158);
+$portfolio-banner-color3: rgb(228, 159, 245);
+$portfolio-title-color: rgb(116, 7, 7);
+$portfolio-color: rgb(248, 248, 248);
 
 $sidebar-color1: rgb(209, 234, 255);
 $sidebar-color-mid: rgb(165, 209, 230);
