[UPDATE] table of contents, adjacent posts

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -24,6 +24,8 @@
 @import "./components/post/post_content";
 @import "./components/post/banner";
 @import "./components/post/line_numbers";
+@import "./components/post/toc";
+@import "./components/post/adjacent_post";
 
 @import "./components/portfolio/banner";
 
