--- a/assets/static/sass/components/_scroll_top.scss
+++ b/assets/static/sass/components/_scroll_top.scss
@@ -18,10 +18,12 @@
   justify-content: center;
   align-items: center;
 
-  transition: opacity 1s;
+  transition: opacity 0.4s, visibility 0.4s;
   opacity: 1;
+  visibility: visible;
 
   &.hidden {
     opacity: 0;
+    visibility: hidden;
   }
 }
