--- a/assets/static/sass/layout/_root.scss
+++ b/assets/static/sass/layout/_root.scss
@@ -1,4 +1,8 @@
 :root {
   font-family: $default-font;
   scroll-behavior: smooth;
+
+  ::selection {
+    background-color: rgba(rgb(0, 0, 0), 0.15);
+  }
 }
