[UPDATE] homepage's about section

--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -23,6 +23,7 @@ $hotpost-card-color: rgb(167, 51, 31);
 $hotpost-card-hover-color: rgb(250, 218, 214);
 $about-card-color: rgb(173, 226, 208);
 $about-card-hover-color: rgb(19, 95, 70);
+$about-card-link-color: rgb(246, 255, 169);
 $more-card-hover-color: $default-ui-color;
 
 $articles-page-color: rgb(244, 249, 255);
