--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -17,6 +17,7 @@
 @import "./components/homepage/banner";
 @import "./components/homepage/card_deck";
 @import "./components/homepage/article_grid";
+@import "./components/homepage/about";
 
 @import "./components/articles/post";
 @import "./components/articles/banner";
